[gd_scene load_steps=5 format=3 uid="uid://btieu1cno5o6k"]

[ext_resource type="Script" path="res://source/scenes/throne_room/throne_room.gd" id="1_6h3mq"]
[ext_resource type="Texture2D" uid="uid://caii4b7t7uk1l" path="res://assets/REPLACE_BEFORE_SUBMISSION/throneroom_placeholder.jpg" id="2_b0ee3"]
[ext_resource type="PackedScene" uid="uid://7codxq0yg473" path="res://source/scenes/ui/elements/TEMPORARYBACKBUTTON.tscn" id="3_lxolc"]
[ext_resource type="Theme" uid="uid://cn762radik7xw" path="res://assets/themes/default.tres" id="4_77ieo"]

[node name="ThroneRoom" type="Node2D"]
script = ExtResource("1_6h3mq")

[node name="PLACEHOLDER BG" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_b0ee3")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InfluenceBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -349.0
offset_right = 349.0
offset_bottom = 75.0
grow_horizontal = 2

[node name="SecondaryResources" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -382.0
offset_right = 335.0
grow_vertical = 0

[node name="ChaosBar" type="ProgressBar" parent="UI/SecondaryResources"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
fill_mode = 3

[node name="MoneyBar" type="ProgressBar" parent="UI/SecondaryResources"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
fill_mode = 3

[node name="CultSizeBar" type="ProgressBar" parent="UI/SecondaryResources"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
fill_mode = 3

[node name="ReagentsBar" type="ProgressBar" parent="UI/SecondaryResources"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
fill_mode = 3

[node name="TEMPORARYBACKBUTTON" parent="UI" instance=ExtResource("3_lxolc")]
layout_mode = 0
offset_left = 610.0
offset_top = 988.0
offset_right = 1320.0
offset_bottom = 1056.0

[node name="ResourceDebugging" type="MenuButton" parent="UI"]
layout_mode = 0
offset_right = 177.0
offset_bottom = 52.0
theme = ExtResource("4_77ieo")
text = "Resources"

[node name="SaveStates" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
